<resources>
    <string name="app_name">Gaston</string>
    <string name="txt_saldo">R$ 1412,00</string>
    <string name="txt_saldoRestante">SALDO RESTANTE</string>
    <string name="Home">Home</string>
    <string name="Receita">Receita</string>
    <string name="Orcamento">Orçamento</string>
    <string name="Despesa">Despesa</string>
    <string name="Transações">Transações</string>
    <string name="Titulo">Titulo</string>
    <string name="Valor">Valor</string>
    <string name="Editar">Editar</string>
    <string name="Apagar">Apagar</string>
    <string name="rectangle">rectangle</string>
    <string name="iconebtnuser">iconeBtnUser</string>
    <string name="resumoReceita">+ R$ 0.00</string>
    <string name="resumoDespesa">- R$ 0.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_bottom_bar_home">Home</string>
    <string name="menu_bottom_bar_despesa">Despesa</string>
    <string name="menu_bottom_bar_orcamento">Orçamento</string>
    <string name="menu_bottom_bar_receita">Receita</string>
    <string name="menu_bottom_bar_transacao">Transação</string>
    <string name="menu_bottom_bar_historico">Histórico</string>
    <string name="iconeuser">iconeUser</string>
    <string name="categoria">Categoria</string>
    <string name="data">Data</string>


    <string-array name="categorias_despesa">
        <item>Consumo</item>
        <item>Saúde</item>
        <item>Casa</item>
        <item>Pet</item>
        <item>Transporte</item>
        <item>Educação</item>
        <item>Outros</item>
    </string-array>


</resources>