<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottombar"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Valor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewTitulo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="22dp"
            android:text="@string/data"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategoria" />

        <TextView
            android:id="@+id/textViewCategoria"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/categoria"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewData"
            app:layout_constraintEnd_toStartOf="@+id/buttonEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="86dp"
            android:layout_height="44dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="56dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/Editar"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="86dp"
            android:layout_height="44dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="56dp"
            android:backgroundTint="@color/red"
            android:text="@string/Apagar"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>